DT-390 Fix filetree horizontal scrollbar

--- a/src/renderer/features/workbench/components/FileTree/FileTree.scss
+++ b/src/renderer/features/workbench/components/FileTree/FileTree.scss
@@ -7,7 +7,8 @@
     font-size: 14px;
 
     > ol {
-      overflow-x: hidden;
+      display: grid;
+      overflow-x: scroll;
     }
 
     .rct-collapse {
